--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <header>
+        <!-- vine credit https://thenounproject.com/icon/leaf-branch-418948/ -->
         <?xml version="1.0" encoding="UTF-8"?>
         <svg class="vine" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1374.2 132.36">
             <path
@@ -178,7 +179,7 @@
             </g>
         </svg>
 
-
+       <!-- sound credit https://freesound.org/people/Cunningar0807/sounds/436129/ -->
         <audio id="sound">
             <source src="imgs\Harp.mp3" type="audio/mp3">
         </audio>
