--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         </svg>
     </header>
     <h1>Plant Customizer</h1>
+    <p> Press 1 or Click on the dark grey box.</p>
+
 
     <div class="container gridparent">
 
@@ -45,6 +47,8 @@
 
 
     <footer>
+
+        <p class="done"> Click Check When Done!</p>
 
         <!-- /https://thenounproject.com/icon/checkmark-154036/ -->
         <svg class="check" version="1.1" viewBox="0 0 700 700" xmlns="http://www.w3.org/2000/svg"
@@ -179,7 +183,7 @@
             </g>
         </svg>
 
-       <!-- sound credit https://freesound.org/people/Cunningar0807/sounds/436129/ -->
+        <!-- sound credit https://freesound.org/people/Cunningar0807/sounds/436129/ -->
         <audio id="sound">
             <source src="imgs\Harp.mp3" type="audio/mp3">
         </audio>
